Fix center align"

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,71 +1,72 @@
 #root {
-  min-height: calc(100vh);
-  min-width: calc(100vw - 100px);
-  justify-content: center;
+    display: grid;
+    min-height: calc(100vh);
+    min-width: calc(100vw - 100px);
+    justify-content: center;
 }
 
 html {
-  box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial,
-    Helvetica, sans-serif;
+    box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial,
+        Helvetica, sans-serif;
 }
 
 body {
-  background-image: url('../assets/images/topography.svg'),
-    repeating-linear-gradient(110deg, #f93d66, #6d47d9);
-  background-attachment: fixed;
+    background-image: url('../assets/images/topography.svg'),
+        repeating-linear-gradient(110deg, #f93d66, #6d47d9);
+    background-attachment: fixed;
 }
 
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 .container {
-  flex: 1;
-  height: 30vh;
-  width: 100vw;
-  padding-left: 10px;
-  padding-right: 10px;
-  animation: fadein 1s;
-  -webkit-animation: fadein 1s;
+    flex: 1;
+    height: 30vh;
+    width: 100vw;
+    padding-left: 10px;
+    padding-right: 10px;
+    animation: fadein 1s;
+    -webkit-animation: fadein 1s;
 }
 
 .app-loading {
-  font-size: 20px;
-  color: #ffffff;
-  position: absolute;
-  left: 50%;
-  top: 40%;
+    font-size: 20px;
+    color: #ffffff;
+    position: absolute;
+    left: 50%;
+    top: 40%;
 }
 
 @keyframes fadein {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 @-webkit-keyframes fadein {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 @media (min-width: 760px) {
-  .container {
-    width: 60vw;
-  }
+    .container {
+        width: 60vw;
+    }
 }
 
 @media (min-width: 1120px) {
-  .container {
-    width: 55vw;
-  }
+    .container {
+        width: 55vw;
+    }
 }
